cabal-version: 3.12
name: cardano-ledger-release-tool
version: 0.4.0.1
author: Neil Mayhew <neil.mayhew@iohk.io>
copyright: 2025 IOG
license: Apache-2.0
synopsis:
  Assist with release policy for cardano-ledger

description:
  This is a tool that is used by the cardano-ledger team to simplify and enforce
  releasing and versioning policy

tested-with:
  ghc ==8.10.7 || ==9.2.8 || ==9.4.8 || ==9.6.7 || ==9.8.4 || ==9.10.2 || ==9.12.2

extra-doc-files:
  CHANGELOG.md
  LICENSE
  NOTICE
  README.md

data-files:
  test/fixtures/**/*.golden
  test/fixtures/**/*.json
  test/fixtures/**/*.lock
  test/fixtures/**/*.log
  test/fixtures/**/*.md
  test/fixtures/**/*.project
  test/fixtures/**/*.yml

common language
  default-language: Haskell2010
  other-extensions:
    ApplicativeDo
    OverloadedStrings
    RecordWildCards

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wunused-packages
    -Werror

common rts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

executable cleret
  import: language, warnings, rts
  hs-source-dirs: src
  main-is: main.hs
  other-modules:
    Cabal.Command
    Changelogs.Command
    Changelogs.Types
    Common.Options
    Failures.Command
    Failures.Extract
    Failures.LogResults
    Failures.Parse
    Failures.Render
    Nix.Command
    PackageInfo_cardano_ledger_release_tool
    Workflow.Command

  autogen-modules:
    PackageInfo_cardano_ledger_release_tool

  build-depends:
    aeson,
    base,
    bytestring,
    cabal-plan,
    cmark,
    containers,
    directory,
    filemanip,
    filepath,
    microlens,
    microlens-aeson,
    mtl,
    optparse-applicative,
    pretty-simple,
    process,
    regex-applicative,
    temporary,
    terminal-size,
    text,
    time,
    unliftio,
    yaml,

test-suite golden-tests
  import: language, warnings, rts
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: main.hs
  other-modules:
    Paths_cardano_ledger_release_tool
    Test.Cabal.Spec
    Test.Changelogs.Spec
    Test.Common.Fixture
    Test.Common.Golden
    Test.Failures.Spec
    Test.Nix.Spec
    Test.Workflow.Spec

  autogen-modules:
    Paths_cardano_ledger_release_tool

  build-depends:
    base,
    filemanip,
    filepath,
    hspec,
    HUnit,
    process,
    temporary,
    text,
    unliftio,

  build-tool-depends:
    cardano-ledger-release-tool:cleret
