cabal-version: 3.0
name: main
version: 0.1.0.0
synopsis: Main package for cardano-ledger-release-tool
author: Neil Mayhew <neil.mayhew@iohk.io>
copyright: 2025 IOG
license: Apache-2.0
tested-with:
  ghc ==8.10.7 || ==9.2.8 || ==9.4.8 || ==9.6.7 || ==9.8.4 || ==9.10.2 || ==9.12.2

common language
  default-language: Haskell2010

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wunused-packages
    -Werror

common rts
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

executable cardano-ledger-release-tool
  import: language, warnings, rts
  main-is: main.hs
  build-depends:
    base,
    changelogs,
    common,
    optparse-applicative,
    terminal-size,
